# mac-gpt

./: .gitignore  README.md  env.example  main.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
pipeline/: __init__.py  extract.py  transform.py
src/: __init__.py
src/chatbot/: __init__.py  cli.py  ejemplo_uso.py  mac_gpt.py
src/chatbot/web/: app.py  run.py
src/chatbot/web/templates/: index.html
src/extractors/: __init__.py  pdf_extractor.py  web_scraper.py
src/loaders/: __init__.py  file_handler.py
src/transformers/: __init__.py  embeddings.py
